# argmodel

./: .gitignore  README.md  dprint.json  pyproject.toml
.github/workflows/: actionlint.yaml
examples/: simple.py  subparsers_with_base.py
src/argmodel/: __init__.py  _constants.py  field.py  model.py  model_test.py  parser.py  parser_test.py  test_model.py  typing_utils.py  typing_utls_test.py
src/argmodel/model/: argument_builder.py  base.py  base_test.py
