[project]
name = "argmodel"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "illumination-k", email = "illumination.k.27@gmail.com" }
]
dependencies = [
    "pydantic>=2.7.1",
]
readme = "README.md"
requires-python = ">= 3.12"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "pytest>=8.2.0",
    "mypy>=1.10.0",
    "ruff>=0.4.2",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.mypy]
color_output = true